--- a/demo4_17.ui
+++ b/demo4_17.ui
@@ -325,7 +325,7 @@
                  <enum>QTabWidget::Rounded</enum>
                 </property>
                 <property name="currentIndex">
-                 <number>3</number>
+                 <number>1</number>
                 </property>
                 <widget class="QWidget" name="tab_7">
                  <attribute name="title">
@@ -463,7 +463,7 @@
                    </spacer>
                   </item>
                   <item row="5" column="2">
-                   <widget class="QLabel" name="label_3">
+                   <widget class="QLabel" name="label_Center">
                     <property name="sizePolicy">
                      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                       <horstretch>0</horstretch>
@@ -850,6 +850,32 @@
                      </size>
                     </property>
                    </spacer>
+                  </item>
+                  <item row="5" column="3">
+                   <widget class="QPushButton" name="pushButton_CenterSet">
+                    <property name="sizePolicy">
+                     <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
+                      <horstretch>0</horstretch>
+                      <verstretch>0</verstretch>
+                     </sizepolicy>
+                    </property>
+                    <property name="minimumSize">
+                     <size>
+                      <width>51</width>
+                      <height>51</height>
+                     </size>
+                    </property>
+                    <property name="font">
+                     <font>
+                      <pointsize>12</pointsize>
+                      <weight>75</weight>
+                      <bold>true</bold>
+                     </font>
+                    </property>
+                    <property name="text">
+                     <string>Set</string>
+                    </property>
+                   </widget>
                   </item>
                  </layout>
                 </widget>
